--- a/package.json
+++ b/package.json
@@ -33,16 +33,22 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
     "@hookform/resolvers": "3.1.1",
+    "@mui/material": "5.14.8",
+    "@mui/styled-engine-sc": "5.14.8",
     "@plaiceholder/next": "3.0.0",
     "@sendgrid/mail": "^7.6.0",
     "@vercel/analytics": "^0.1.8",
     "algoliasearch": "^4.11.0",
     "dayjs": "^1.10.7",
+    "dotenv": "16.3.1",
     "feed": "^4.2.2",
     "framer-motion": "^5.3.3",
     "gray-matter": "^4.0.3",
     "invariant": "^2.2.4",
+    "mui": "0.0.1",
     "next": "13.4.8",
     "next-mdx-remote": "^3.0.6",
     "next-pwa": "^5.6.0",
@@ -59,6 +65,8 @@
     "server-only": "0.0.1",
     "sharp": "^0.32.1",
     "slugify": "^1.6.4",
+    "styled-components": "6.0.7",
+    "tss-react": "4.9.0",
     "zod": "3.21.4"
   },
   "devDependencies": {
